@@ -17,24 +17,24 @@ require_relative 'raygui_helper'
 module Raylib
   extend FFI::Library
 
-  def self.load_lib(libpath, raygui_libpath: nil, physac_libpath: nil)
+  def self.load_lib(libpath, raygui_libpath: nil, physac_libpath: nil, method_naming: :original)
     lib_paths = [libpath, raygui_libpath, physac_libpath].compact
 
     ffi_lib_flags :now, :global
     ffi_lib(*lib_paths)
-    setup_symbols
+    setup_symbols(method_naming: method_naming)
 
-    setup_raygui_symbols unless raygui_libpath.nil?
-    setup_physac_symbols unless physac_libpath.nil?
+    setup_raygui_symbols(method_naming: method_naming) unless raygui_libpath.nil?
+    setup_physac_symbols(method_naming: method_naming) unless physac_libpath.nil?
   rescue LoadError => e
     warn e
   end
 
-  def self.setup_symbols
-    setup_raylib_symbols
-    setup_raymath_symbols
-    setup_rcamera_symbols
-    setup_rlgl_symbols
+  def self.setup_symbols(method_naming: :original)
+    setup_raylib_symbols(method_naming: method_naming)
+    setup_raymath_symbols(method_naming: method_naming)
+    setup_rcamera_symbols(method_naming: method_naming)
+    setup_rlgl_symbols(method_naming: method_naming)
   end
 
   #
